# pompeji

./: .gitignore  .pre-commit-config.yaml  README.md  cd.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: build.sh  check_sys.py  main.py
src/templates/: base.json  full.json  test.json
tests/: test_sys_reqs.py
